The new apropos(1) incorrectly displays hyphens in the first line of the search results for a few man pages (for man(7) based man pages).

Use patch from Abhinav Upadhyay in PR 46408 to fix this.